# HEOM-baseline

./: README.md
fmo-nz-kernel/: pyproject.toml
fmo-nz-kernel/examples/: fmo7_kernel_demo.toml  fmo7_short.toml  smoke_3site.toml
fmo-nz-kernel/scripts/: run_extract_kernel.py  run_heom_smoke.py  run_markov_compare.py  run_pipeline.py  run_reconstruct_map.py  run_validate.py
fmo-nz-kernel/src/fmo_nz_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
fmo-nz-kernel/src/fmonz/: __init__.py  cli.py  config.py
fmo-nz-kernel/src/fmonz/physics/: hamiltonian.py  initial_states.py  liouvillian.py
fmo-nz-kernel/src/fmonz/plotting/: figures.py
fmo-nz-kernel/src/fmonz/reconstruction/: dynamical_map.py  kernel_inversion.py  memory_metrics.py
fmo-nz-kernel/src/fmonz/solvers/: heom_interface.py  heom_quutip.py  markov_propagator.py  nz_propagator.py
fmo-nz-kernel/src/fmonz/utils/: basis.py  constraints.py  differencing.py  io.py  linalg.py  regularization.py  vec.py
fmo-nz-kernel/src/fmonz/validation/: benchmarks.py  metrics.py
fmo-nz-kernel/tests/: test_basis_orthonormality.py  test_config.py  test_constraints_projection.py  test_derivative.py  test_hamiltonian.py  test_heom_interface.py  test_io_and_pipeline.py  test_map_reconstruction_shape.py  test_markov.py  test_nz_propagation.py  test_validation_metrics.py  test_vec_conventions.py  test_volterra_inversion_sanity.py
