[project]
name = "fmo-nz-kernel"
version = "0.1.0"
description = "Non-Markovian kernel toolkit for FMO models"
authors = [ { name = "" } ]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "toml",
]

[project.optional-dependencies]
heom = ["qutip>=5.0"]
parallel = ["joblib>=1.3"]
io = ["h5py>=3.10"]
cli = ["typer>=0.12", "rich>=13.7"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
